@@ -186,7 +186,12 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.5</version>
                 <configuration>
-                    <mainClass>krasa.albion.application.SpringbootJavaFxApplication</mainClass>
+                    <mainClass>krasa.albion.AlbionMarketClientApplication</mainClass>
+                    <options>
+                        <!--TODO fuck java modules-->
+                        <option>--add-exports</option>
+                        <option>javafx.base/com.sun.javafx.event=org.controlsfx.controls</option>
+                    </options>
                 </configuration>
             </plugin>
             <plugin>
